# power-monitor-firmware

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/app_core/: CMakeLists.txt  README.md  app_core.c  command_handler.c
components/app_core/include/: app_core.h  app_events.h
components/board/: CMakeLists.txt  README.md  board_config.c
components/board/include/: board_config.h  (+1 more)
components/common/: CMakeLists.txt  README.md  common.c
components/connectivity/: CMakeLists.txt  README.md  ble_prov_security.c  ble_provisioning.c  connectivity.c  idf_component.yml  time_sync.c  wifi_manager.c
components/connectivity/include/: ble_prov_security.h  ble_provisioning.h  connectivity.h  time_sync.h  wifi_manager.h
components/fault_manager/: CMakeLists.txt  README.md  fault_manager.c
components/io_manager/: CMakeLists.txt  README.md  button_input.c  io_manager.c  led_indicator.c
components/metrology/: CMakeLists.txt  README.md  adc_sampler.c  calibration.c  metrology.c  power_calculator.c  thd_calculator.c
components/metrology/include/: adc_sampler.h  calibration.h  measurement_types.h  metrology.h  power_calculator.h  thd_calculator.h
components/relay_control/: CMakeLists.txt  README.md  relay_control.c  relay_driver.c
components/status_indicator/: CMakeLists.txt  README.md  status_indicator.c
components/storage/: CMakeLists.txt  README.md  config_store.c  credential_store.c
components/telemetry/: CMakeLists.txt  README.md  mqtt_manager.c  mqtt_payloads.c  mqtt_topics.c  telemetry.c
main/: CMakeLists.txt  app_main.c  idf_component.yml
(+16 files in other folders)
