idf_component_register(
    SRCS 
        "adc_sampler.c" 
        "metrology.c"
        "calibration.c"
        "power_calculator.c"
        "thd_calculator.c"
    INCLUDE_DIRS 
        "include"
    REQUIRES 
        common
        board
        storage
        esp_timer
        driver
        relay_control
    PRIV_REQUIRES 
        esp_adc
)
